force-app/main/default/objects/Balance__x/Balance__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>Balance</externalName>
    <label>Balance</label>
    <pluralLabel>Balances</pluralLabel>
</CustomObject>