force-app/main/default/objects/Balance__x/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <externalDeveloperName>Credit</externalDeveloperName>
    <label>Credit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>