force-app/main/default/objects/Balance__x/fields/FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountId__c</fullName>
    <externalDeveloperName>FinancialAccountId</externalDeveloperName>
    <label>FinancialAccount</label>
    <length>18</length>
    <referenceTargetField>FinancialAccount__c.GUID__c</referenceTargetField>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Balances</relationshipLabel>
    <relationshipName>Balances</relationshipName>
    <type>IndirectLookup</type>
</CustomField>