force-app/main/default/objects/Balance__x/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <externalDeveloperName>Investment</externalDeveloperName>
    <label>Investment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>