force-app/main/default/objects/Balance__x/fields/MaxCreditLine__c.field-meta.xml
<CustomField>
    <fullName>MaxCreditLine__c</fullName>
    <label>Max Credit  Line</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>