force-app/main/default/objects/Balance__x/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <externalDeveloperName>Mortgage</externalDeveloperName>
    <label>Mortgage</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>