force-app/main/default/objects/Balance__x/fields/StandardAccountBalanceNIS__c.field-meta.xml
<CustomField>
    <fullName>StandardAccountBalanceNIS__c</fullName>
    <externalDeveloperName>StandardAccountBalanceNIS</externalDeveloperName>
    <label>Standard Account Balance NIS</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>