force-app/main/default/objects/Balance__x/fields/StandardAccountBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>StandardAccountBalanceUSD__c</fullName>
    <externalDeveloperName>StandardAccountBalanceUSD</externalDeveloperName>
    <label>Standard Account Balance - USD</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>